# client

./: .drone.star
src/common/: utility_unix.cpp
src/gui/: CMakeLists.txt  application.cpp  application.h  owncloudgui.cpp  owncloudgui.h  servernotificationhandler.cpp
src/gui/newwizard/: CMakeLists.txt  Pagination.cpp  Pagination.h  SetupWizardAccountBuilder.cpp  SetupWizardAccountBuilder.h  SetupWizardController.cpp  SetupWizardController.h  SetupWizardWindow.cpp  SetupWizardWindow.h  SetupWizardWindow.ui
src/gui/newwizard/pages/: AbstractSetupWizardPage.cpp  AbstractSetupWizardPage.h  AccountConfiguredWizardPage.cpp  AccountConfiguredWizardPage.h  AccountConfiguredWizardPage.ui  BasicCredentialsSetupWizardPage.cpp  BasicCredentialsSetupWizardPage.h  BasicCredentialsSetupWizardPage.ui  OAuthCredentialsSetupWizardPage.ui  ServerUrlSetupWizardPage.cpp  ServerUrlSetupWizardPage.h  SyncOptionsSetupWizardPage.cpp  SyncOptionsSetupWizardPage.h  SyncOptionsSetupWizardPage.ui
src/libsync/: account.cpp  networkjobs.cpp
src/libsync/creds/: httpcredentials.cpp  httpcredentials.h
test/gui/shared/steps/: steps.py
test/gui/tst_sharing/: test.feature
test/gui/tst_syncing/: test.feature
